Update layout for profile show for candidate, spacing is correct

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -5,6 +5,11 @@
 	padding-top: 90px;
 }
 
+.image_style {
+	padding-right: 50px;
+}
+
+
 /////////////////////////////////////
 ////////// profile forms ///////////
 ///////////////////////////////////
